--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -115,5 +115,10 @@
     background-color: white;
     border-radius: 10px;
     padding: 0px 10px 0px 10px;
-    margin: 0px 3px 0px 3px;
+    margin: 0px 5px 0px 5px;
+}
+
+.epr-list {
+    list-style: none;
+    text-indent: 5px;
 }
