--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -27,8 +27,9 @@
 }
 
 #descr-site {
-    height: 150px;
+    height: 100px;
     overflow-y: auto;
+    border-bottom: 1px solid black;
 }
 
 #fiche-site {
@@ -43,6 +44,15 @@
     padding: 0 10px 0 10px;
     margin-bottom: 15px;
     background-color: white;
+    text-decoration: underline solid;
+}
+
+.site-photos {
+    width: 500px;
+    height: 280px;
+    border: 1px solid black;
+    border-radius: 5px;
+    object-fit: cover;
 }
 
 #quit-button {
@@ -105,12 +115,22 @@
     border: none;
 }
 
+.site-button:hover {
+    background-color: rgb(190, 190, 104);
+}
+
 .menu-list {
-    border: 5px solid black;
+    border: none;
+}
+
+.social-icon {
+    transition-duration: 0.2s;
 }
 
 .social-icon:hover {
     outline-color: white;
+    filter: drop-shadow(0 0 0.75rem rgb(255, 251, 252));
+    margin-top: 5px;
 }
 
 .inner-filter {
@@ -121,6 +141,27 @@
 }
 
 .epr-list {
-    list-style: none;
+    list-style-type: circle;
     text-indent: 5px;
+}
+
+.dropdown .menu-list:hover {
+    color: rgb(129, 129, 129);
+}
+
+#header-title {
+    color: white;
+    font-size: 22px;
+    position: absolute;
+    margin-left: 10px;
+    top: 26px;
+    left: 5px;
+    text-shadow: 1px 1px 2px white, 3px 1px 0.1em black, -4px 2px 0.2em rgb(224, 224, 133);
+    text-transform: uppercase;
+}
+
+div .site-button:focus,
+div .menu-list:focus {
+    outline: 0;
+    box-shadow: none;
 }
